--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     
     <header>
-        <p>View High Score</p>
-        <p>Timer</p>
+        <p id="view-high-scores">View High Score</p>
+        <p class="timer">Timer:</p>
     </header>
 
     <div>
