--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     
     <header>
         <p id="view-high-scores">View High Score</p>
-        <p class="timer">Timer:</p>
+        <p class="timer" id="timer">Timer:</p>
     </header>
 
-    <div>
-        <div>
+    <div id="start-container" class="show">
+        <div class="">
             <h1>Coding Quiz Challenge</h1>
             <p>Try to answer the following code-related questions within the time limit.
                 Keep in mind that incorrect answers will penalize your  time by 10 seconds!
             </p>
-            <button>Start Quiz</button>
+            <button class="btn startend" id="start-game">Start Quiz</button>
         </div>
     </div>
 
