trying things out

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <header>
         <p id="view-high-scores">View High Score</p>
-        <p class="timer" id="timer">Timer:</p>
+        <p class="timer" id="timer">Time Left: </p>
     </header>
 
     <div id="start-container" class="show">
@@ -34,10 +34,10 @@
 
 
     <div class="hide" id="right">
-        <h2>Correct :)!</h2>
+        <h2>Correct :) </h2>
     </div>
     <div class="hide" id="wrong">
-        <h2>Wrong :( </h2>
+        <h2>Wrong ¯\_(ツ)_/¯ </h2>
     </div>
 
 
