--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +9,17 @@
 </head>
 
 <body>
-    
+
     <header>
-        <p id="view-high-scores">View High Score</p>
-        <p class="timer" id="timer">Time Left: </p>
+        <h4 id="view-high-scores">View High Scores</h4> 
+        <h4 class="timer">Time: <span id="timer"></span></h4>
     </header>
 
     <div id="start-container" class="show">
         <div class="start container">
             <h1>Coding Quiz Challenge</h1>
             <p>Try to answer the following code-related questions within the time limit.
-                Keep in mind that incorrect answers will penalize your  time by 10 seconds!
+                Keep in mind that incorrect answers will penalize your time by 10 seconds!
             </p>
             <button class="btn startend" id="start-game">Start Quiz</button>
         </div>
@@ -33,29 +34,29 @@
 
     <div id="end-container" class="hide">
         <div class="container end">
-         <div id=score-banner>
-             <h1>All done!</h1>
-         </div>  
-         <form id="initials-form" class="initials">
-           <p> Enter Initials:
-             <input type="text" name="initials" id="initials" class="text-input" />
-             <button class="btn startend" id="sumbit-score" type="submit">Submit</button> </p>
-           </form>
-         </div>
-     </div>
+            <div id=score-banner>
+                <h1>All done!</h1>
+            </div>
+            <form id="initials-form" class="initials">
+                <p> Enter Initials:
+                    <input type="text" name="initials" id="initials" class="text-input" />
+                    <button class="btn startend" id="sumbit-score" type="submit">Submit</button>
+                </p>
+            </form>
+        </div>
+    </div>
 
-     <div id="high-score-container" class="hide">
-       <div class="high-scores container">
-         <h1 class="high-score">High Scores</h1>
-         <ol id="high-score-list" class="score-list"></ol>
-     <div>
-         <button class="btn" id="go-back">Go back</button>
-         <button class="btn" id="clear-high-scores">Clear high scores</button>
-     </div>
-     </div>
- </div>
+    <div id="high-score-container" class="hide">
+        <div class="high-scores container">
+            <h1 class="high-score">High Scores</h1>
+            <ol id="high-score-list" class="score-list"></ol>
+            <div>
+                <button class="btn" id="go-back">Go back</button>
+                <button class="btn" id="clear-high-scores">Clear high scores</button>
+            </div>
+        </div>
+    </div>
 
- 
 
     <div class="hide" id="right">
         <h2>Correct :) </h2>
@@ -65,7 +66,7 @@
     </div>
 
 
-
-
+    <script src="./script.js"></script> 
 </body>
+
 </html>
