--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <header>
         <h4 id="view-high-scores">View High Scores</h4> 
-        <h4 class="timer">Time: <span id="timer"></span></h4>
+        <h4 class="timer">Time Remaining: <span id="timer"></span></h4>
     </header>
 
-    <div id="start-container" class="show">
+    <div id="start" class="show">
         <div class="start container">
             <h1>Coding Quiz Challenge</h1>
             <p>Try to answer the following code-related questions within the time limit.
-                Keep in mind that incorrect answers will penalize your time by 10 seconds!
+                Keep in mind that incorrect answers will penalize your time by 5 seconds!
             </p>
             <button class="btn startend" id="start-game">Start Quiz</button>
         </div>
@@ -32,9 +32,9 @@
         </div>
     </div>
 
-    <div id="end-container" class="hide">
+    <div id="end" class="hide">
         <div class="container end">
-            <div id=score-banner>
+            <div id=scores>
                 <h1>All done!</h1>
             </div>
             <form id="initials-form" class="initials">
@@ -51,8 +51,8 @@
             <h1 class="high-score">High Scores</h1>
             <ol id="high-score-list" class="score-list"></ol>
             <div>
-                <button class="btn" id="go-back">Go back</button>
-                <button class="btn" id="clear-high-scores">Clear high scores</button>
+                <button class="btn" id="start-again">Start Again?</button>
+                <button class="btn" id="clear-scores">Clear high scores</button>
             </div>
         </div>
     </div>
